# rws_plugin_template

./: CMakeLists.txt
src/: plugin.json  rws_plugin_template.cpp  rws_plugin_template.hpp  rws_plugin_template.ui
